# QLog

./: CMakeLists.txt  Changelog  QLog.pro  README.md
.github/ISSUE_TEMPLATE/: 01-Bug Report.yml
.github/workflows/: c-cpp.yml
awards/: AwardWAAC.cpp
core/: AlertEvaluator.cpp  CredentialStore.cpp  CredentialStore.h  EmergencyFrequency.cpp  EmergencyFrequency.h  FileCompressor.cpp  FileCompressor.h  LOVDownloader.cpp  LOVDownloader.h  LogDatabase.cpp  LogDatabase.h  LogParam.cpp  LogParam.h  MembershipQE.cpp  Migration.cpp  Migration.h  PasswordCipher.cpp  PasswordCipher.h  PlatformParameterManager.cpp  PlatformParameterManager.h  QSLStorage.cpp  QSLStorage.h  WsjtxUDPReceiver.cpp  main.cpp
cwkey/: CWKeyer.cpp
cwkey/drivers/: CWDaemonKey.cpp  CWDaemonKey.h  CWDummyKey.cpp  CWFldigiKey.cpp  CWKey.cpp  CWKey.h  CWWinKey.cpp  CWWinKey.h
data/: BandPlan.cpp  BandPlan.h  CWKeyProfile.cpp  CWKeyProfile.h  Data.cpp  Data.h  RigProfile.cpp  RigProfile.h  UpdatableSQLRecord.cpp  UpdatableSQLRecord.h  WsjtxEntry.h
debian/: changelog  control  copyright
devtools/deployment/: finalize_release.sh
devtools/windowsMake/: make.bat  tests.bat
i18n/: qlog_cs.qm  qlog_cs.ts  qlog_de.qm  qlog_de.ts  qlog_es.qm  qlog_es.ts  qlog_fr.qm  qlog_fr.ts  qlog_it.qm  qlog_it.ts  qlog_zh_CN.qm  qlog_zh_CN.ts
installer/config/: config.xml
logformat/: AdiFormat.h  LogFormat.cpp  LogFormat.h
models/: AlertTableModel.cpp
res/: io.github.foldynl.QLog.metainfo.xml  qlog.1  res.qrc
res/data/: legacy_modes.json
res/sql/: migration_036.sql  migration_037.sql
rig/: Rig.cpp  Rig.h  RigctldManager.cpp  RigctldManager.h
rig/drivers/: HamlibRigDrv.cpp  HamlibRigDrv.h  TCIRigDrv.cpp
rotator/drivers/: HamlibRotDrv.cpp
rpm_spec/: qlog.spec
service/cloudlog/: Cloudlog.cpp  Cloudlog.h
service/clublog/: ClubLog.cpp  ClubLog.h
service/eqsl/: Eqsl.cpp  Eqsl.h
service/hamqth/: HamQTH.cpp  HamQTH.h
service/hrdlog/: HRDLog.cpp  HRDLog.h
service/kstchat/: KSTChat.cpp  KSTChat.h
service/lotw/: Lotw.cpp  Lotw.h
service/qrzcom/: QRZ.cpp  QRZ.h
tests/: tests.pro
tests/AlertEvaluatorTest/: tst_alertevaluator.cpp
tests/BandPlanTest/: tst_bandplan.cpp
tests/CredentialStoreTest/: CredentialStoreTest.pro  test_stubs.cpp  tst_credentialstore.cpp
tests/FileCompressorTest/: FileCompressorTest.pro  tst_filecompressor.cpp
tests/GridsquareTest/: tst_gridsquare.cpp
tests/MigrationTest/: tst_migration.cpp
tests/PasswordCipherTest/: PasswordCipherTest.pro  tst_passwordcipher.cpp
tests/RigctldManagerTest/: RigctldManagerTest.pro  test_stubs.cpp  tst_rigctldmanager.cpp
tests/RigctldManagerTest/core/: debug.h
tests/RigctldManagerTest/data/: RigProfile.h
ui/: AlertRuleDetail.cpp  AlertRuleDetail.ui  AwardsDialog.cpp  BandmapWidget.cpp  BandmapWidget.h  ChatWidget.cpp  DxFilterDialog.cpp  DxFilterDialog.ui  DxWidget.cpp  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  ExportPasswordDialog.cpp  ExportPasswordDialog.h  ExportPasswordDialog.ui  LoadDatabaseDialog.cpp  LoadDatabaseDialog.h  LoadDatabaseDialog.ui  LogbookWidget.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewContactWidget.cpp  NewContactWidget.h  NewContactWidget.ui  PaperQSLDialog.cpp  PlatformSettingsDialog.cpp  PlatformSettingsDialog.h  PlatformSettingsDialog.ui  QSLGalleryDialog.cpp  QSLGalleryDialog.h  QSLGalleryDialog.ui  QSODetailDialog.cpp  QSODetailDialog.h  QSODetailDialog.ui  QSOFilterDetail.cpp  QTableQSOView.cpp  RigctldAdvancedDialog.cpp  RigctldAdvancedDialog.h  RigctldAdvancedDialog.ui  (+8 more)
ui/component/: LogbookFieldComboBox.cpp  ModeSubmodeDelegate.cpp  ModeSubmodeDelegate.h
